apps/librespeed/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: librespeed
  name: librespeed
  namespace: librespeed
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: librespeed
  type: ClusterIP
status:
  loadBalancer: {}
