apps/librespeed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: librespeed
  namespace: librespeed
spec:
  rules:
    - host: speed.ctnr.cloud
      http:
        paths:
          - backend:
              service:
                name: librespeed
                port:
                  number: 80
            path: /
            pathType: Prefix
